# but_calibration_evolution

./: CMakeLists.txt  README.md
doc/: Makefile  project.bib  project.tex  results.ods
include/: Calibration.h  Exceptions.h  Image.h  Similarity.h  Velodyne.h
presentation/: Makefile  framework.dia  prezentacia.tex
src/: Image.cpp  Similarity.cpp  Velodyne.cpp  calibration.cpp  evolution-calibration.cpp
